# LevelRenderer

./: Creating Your Level.docx  Parsing Your Game Level.txt
The Level Renderer/: CMakeLists.txt  Dungeon.txt  Dungeon2.txt  GameLevel(final).txt  GameLevel(test).txt  GameLevel(test2).txt  GameLevel(test3).txt  GameLevel.txt  Model.h  PixelShader.hlsl  Project Rubric.xlsx  TextureVertexShader.hlsl  TrexSmartLevel.txt  VertexShader.hlsl  defines.h  h2bParser.h  main.cpp  renderer.h
The Level Renderer/Models/: AK47.h  AK47.h2b  AK47.mtl  Apatosaurus.h  Apatosaurus.h2b  Apatosaurus.mtl  AssaultRifle2_1.h  AssaultRifle2_1.h2b  AssaultRifle2_2.h  AssaultRifle2_2.h2b  AssaultRifle2_3.h  AssaultRifle2_3.h2b  AssaultRifle2_4.h  AssaultRifle2_4.h2b  AssaultRifle_1.h  AssaultRifle_1.h2b  AssaultRifle_2.h  AssaultRifle_2.h2b  AssaultRifle_3.h  AssaultRifle_3.h2b  AssaultRifle_4.h  AssaultRifle_4.h2b  AssaultRifle_5.h  AssaultRifle_5.h2b  Barrel.h  Barrel.h2b  Barrel.mtl  Bars.h  Bars.h2b  Bars.mtl  Bones.h  Bones.h2b  Bones.mtl  Bones2.h  Bones2.h2b  Bones2.mtl  Book2.h  Book2.h2b  Book2.mtl  Book3.h  (+225 more)
The Level Renderer/Textures/: skybox.dds  skybox.pvr
The Level Renderer/directxtk12/include/: Audio.h  CommonStates.h  DescriptorHeap.h  GamePad.h  Keyboard.h  SimpleMath.h  SimpleMath.inl  VertexTypes.h
